Fix RTL alignment for project Logo

--- a/client/app/css/main.css
+++ b/client/app/css/main.css
@@ -77,7 +77,7 @@ table {
 }
 
 #LogoBox {
-  margin-right: 1rem;
+  margin-right: 2rem;
   vertical-align: middle;
 }
 
